chapter_06/gatekeeper/enforce_namespace_labelling/namespace_label_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels 
metadata: 
  name: namespace-labels 
spec: 
  parameters: 
    label: "environment" 
  match: 
    kinds: 
      - apiGroups: [""] 
        kinds: ["Namespace"]
