chapter_06/gatekeeper/enforce_namespace_labelling/namespace_label_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1 
kind: ConstraintTemplate 
metadata: 
  name: k8srequiredlabels 
spec: 
  crd: 
    spec: 
      names: 
        kind: K8sRequiredLabels 
        listKind: K8sRequiredLabelsList 
        plural: k8srequiredlabels 
        singular: k8srequiredlabels 

  targets: 
    - target: admission.k8s.gatekeeper.sh 
      rego: | 
        package k8srequiredlabels 

        violation[{"msg": msg}] { 
          input.review.object.kind == "Namespace" 
          not input.review.object.metadata.labels[input.parameters.label] 
          msg := sprintf("Namespace must have the label '%v'", [input.parameters.label]) 
        }
